Fri May 10 01:26:24 1996  Richard Basch  <basch@lehman.com>

	* k5-int.h krb5.hin: Replaced 3des-md5 with 3des-sha.

Tue May  7 17:19:17 1996  Richard Basch  <basch@lehman.com>

	* k5-int.h: We are providing 3DES routines in libcrypto, too...

Thu May  2 18:41:00 1996  Richard Basch  <basch@lehman.com>

	* krb5.hin: krb5_init_random_key & krb5_finish_random_key now
		pass the eblock to the underlying crypto routine.

Fri May  3 00:26:47 1996  Mark Eichin  <eichin@cygnus.com>

	* krb5.hin
	(krb5_get_credentials_validate): declaration for new function.
	(krb5_get_cred_from_kdc_validate): ditto.

Thu May  2 22:52:14 1996  Mark Eichin  <eichin@cygnus.com>

	* krb5.hin (krb5_rd_req_decoded_anyflag): declaration for new
	function, see rd_req_dec.c for details.

Tue Apr 30 14:51:55 1996    <tytso@rsts-11.mit.edu>

	* k5-int.h: Fix Windows definition of PROVIDE_DES_CBC_RAW so that
		the raw DES cryptosystem is properly included.  Removed
		Macintosh definitions of PROVIDE_* since that is done in
		mac/libaries/KerberosHeaders.h.

Thu Apr 11 23:50:24 1996  Theodore Y. Ts'o  <tytso@dcl>

	* krb5.hin (krb5_x, krb5_xc): Fix wrapper macros so they don't
		try to dereference a function pointer as a data value.
		This doesn't work if you're using hpux cc, since functions
		are aligned on 2-byte boundaries, but data has to be
		accessed on 4-byte boundaries.  Accessing a function as a
		data value isn't ANSI C portable anyway.  :-)  Wrapper
		macros now take a function pointer, and check to see if
		the function pointer is non-NULL, instead of taking a
		(*funptr), and seeing if the function when treated as data
		object is non-NULL. 

Wed Apr 10 10:37:21 1996  Theodore Y. Ts'o  (tytso@dcl)

	* krb5.hin (krb5_validate_times): Add prototype of new function.

Tue Apr  9 22:40:49 1996  Mark Eichin  <eichin@cygnus.com>

	* k5-int.h: add prototypes for sam preauth functions.

Thu Mar 28 19:55:04 1996  Richard Basch  <basch@lehman.com>

	* krb5.hin: Added ENCTYPE_DES3_CBC_RAW
