@@ -1,3 +1,13 @@
+Thu May  9 19:28:48 1996  Theodore Y. Ts'o  <tytso@mit.edu>
+
+	* k5-int.h: Added new field values for ap_req_sumtype and
+	 	safe_sumtype.  Added new convenience function for
+		verifying magic numbers: KRB5_VERIFY_MAGIC.
+
+	* krb5.hin (krb5_auth_con_set_req_cksumtype,
+	 	krb5_auth_con_set_safe_cksumtype): Added prototypes of
+		new functions, to replace old krb5_auth_con_setcksumtype.
+
 Fri May 10 01:26:24 1996  Richard Basch  <basch@lehman.com>
 
 	* k5-int.h krb5.hin: Replaced 3des-md5 with 3des-sha.
